--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 id="top-title">All awesome Books</h1>
+        <h1>All awesome Books</h1>
     </header>
     <main class="container">
         <div class="row border border-3 border-dark p-2 book-listing" id="book-list"></div>
@@ -21,9 +21,6 @@
         </form>
     </main>
     <footer></footer>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
