Change the class for functions

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="row border border-3 border-dark p-2 book-listing" id="book-list"></div>
         <hr>
         <h1 id="top-title">Add a new Book</h1>
-        <form class="d-flex flex-column w-75 m-auto" id="book-add" onsubmit="return book.addBooks()">
+        <form class="d-flex flex-column w-75 m-auto" id="book-add" onsubmit="return addBooks()">
             <input type="text" id="name-book" name="name-book" placeholder="Put your title here" required><br>
             <input type="text" id="author-book" name="author-book" placeholder="Put your author here" required><br><br>
             <button class="w-25 align-self-end" type="submit">Add</button>
