--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/querie.css">
     <title>BooksCollection</title>
 </head>
 <body>
     <header>
-        <h1>All awesome Books</h1>
+        <h1 id="top-title0">All awesome Books</h1>
     </header>
     <main class="container">
         <div class="row border border-3 border-dark p-2 book-listing" id="book-list"></div>
         <hr>
-        <h1 id="top-title">Add a new Book</h1>
+        <h1 id="top-title1">Add a new Book</h1>
         <form class="d-flex flex-column w-75 m-auto" id="book-add" onsubmit="return book.addBooks()">
             <input type="text" id="name-book" name="name-book" placeholder="Put your title here" required><br>
             <input type="text" id="author-book" name="author-book" placeholder="Put your author here" required><br><br>
@@ -21,6 +24,7 @@
         </form>
     </main>
     <footer></footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
