--- a/index.html
+++ b/index.html
@@ -9,22 +9,62 @@
     <link rel="stylesheet" href="./assets/css/querie.css">
     <title>BooksCollection</title>
 </head>
-<body>
-    <header>
-        <h1 id="top-title0">All awesome Books</h1>
+<body id="body-div">
+    <header class="container-fluid pt-4">
+        <nav class="d-flex border border-3 border-dark p-2">
+            <div id="navbar-title" class="col-6"><h1>Awesome Books</h1></div>
+            <div class="col-12 col-md-6 d-flex justify-content-center justify-content-md-end align-items-center">
+                <a class="px-2 text-decoration-none text-dark fw-bold " href="#" onclick="book.navList()">List</a>
+                <a class="px-2 text-decoration-none text-dark fw-bold border-start border-end border-2 border-dark" href="#" onclick="book.navAdd()">Add New Book</a>
+                <a class="px-2 text-decoration-none text-dark fw-bold" href="#" onclick="book.navContact()">Contact</a>
+            </div>
+        </nav>
+        <div class="row text-end">
+            <p class="pe-5" id="time-tag-now">
+            </p>
+        </div>
     </header>
-    <main class="container">
-        <div class="row border border-3 border-dark p-2 book-listing" id="book-list"></div>
-        <hr>
-        <h1 id="top-title1">Add a new Book</h1>
-        <form class="d-flex flex-column w-75 m-auto" id="book-add" onsubmit="return book.addBooks()">
-            <input type="text" id="name-book" name="name-book" placeholder="Put your title here" required><br>
-            <input type="text" id="author-book" name="author-book" placeholder="Put your author here" required><br><br>
-            <button class="w-25 align-self-end" type="submit">Add</button>
-        </form>
+    <main id="main-div" class="container">
+        <div id="list-container">
+            <h2 id="top-title">All awesome Books</h2>
+            <div class="row border border-3 border-dark p-2 book-listing" id="book-list"></div>
+        </div>
+
+        <div id="add-container">
+            <h2 id="top-title-add">Add a new Book</h2>
+            <form class="d-flex flex-column w-75 m-auto" id="book-add" onsubmit="return book.addBooks()">
+                <input type="text" id="name-book" name="name-book" placeholder="Put your title here" required><br>
+                <input type="text" id="author-book" name="author-book" placeholder="Put your author here" required><br><br>
+                <button class="w-25 align-self-end" type="submit">Add</button>
+            </form>
+        </div>
+        <div id="contact-container" class="container-fluid">
+            <div class="row">
+                <div id="contact-title" class="col-12 d-flex flex-column justify-content-center align-items-center">
+                    <h2 id="contact-title-inner" class="fw-bolder">Contact information</h2>
+                </div>
+                <div class="col-12 d-flex flex-column justify-content-center align-items-center">
+                    <p class="inner-text fw-bold">
+                        Do you have any questions or you just want to say "Hello"?<br>You can reach out to us!
+                    </p>
+                </div>
+                <div class="col-12 d-flex flex-column justify-content-center align-items-center">
+                    <p class="inner-text fw-bold">
+                        Our e-mail: mail.mail.com<br>Our phone number : 0043548675422<br>Our address Streetname 22, 84503 City, Country
+                    </p>
+                </div>
+            </div>
+        </div>
     </main>
-    <footer></footer>
+    <footer id="footer" class="container-fluid pt-4">
+        <div class="footer-div row d-flex border border-3 border-dark">
+            <div class="col-12 d-flex justify-content-start align-items-center py-2">
+                <h4>Copyright&copy;</h4>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/luxon@1.27.0/build/global/luxon.min.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
